# RoveSoCameraServer_Software

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.devcontainer/: Dockerfile_Jammy  Dockerfile_JetPack  devcontainer.json  install-cmake.sh
.github/: CODEOWNERS
.github/workflows/: clang_check.yml  deploy_doxygen.yml
data/ASCII/: v25.txt
data/Custom_Dictionaries/: RoveSoCameraServer-Dictionary.txt
docs/Doxygen/resources/: DoxygenLayout.xml
src/: RoveSoCameraServerConstants.h  RoveSoCameraServerGlobals.cpp  RoveSoCameraServerGlobals.h  RoveSoCameraServerLogging.cpp  RoveSoCameraServerLogging.h  RoveSoCameraServerNetworking.cpp  RoveSoCameraServerNetworking.h  main.cpp
src/handlers/: CameraHandler.cpp  CameraHandler.h  RecordingHandler.cpp  RecordingHandler.h  StreamingHandler.cpp  StreamingHandler.h
src/interfaces/: AutonomyThread.hpp  Camera.hpp
src/util/: IPS.hpp
src/util/vision/: FetchContainers.hpp
src/vision/cameras/: BasicCam.cpp  BasicCam.h
src/vision/streamers/: FFmpegUDPCameraStreamer.cpp  FFmpegUDPCameraStreamer.h
tools/package-builders/ffmpeg/: ffmpeg-amd64-pkg.sh
tools/package-builders/opencv/: opencv-amd64-pkg.sh  opencv-arm64-pkg.sh
